WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252346
WebProcess::m_userGestureTokens should be WeakHashMap instead of HashMap of raw pointers
https://bugs.webkit.org/show_bug.cgi?id=252346
Summary
WebProcess::m_userGestureTokens should be WeakHashMap instead of HashMap of r...
Ryosuke Niwa
Reported
2023-02-15 14:17:46 PST
Deploy WeakHashMap.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-02-15 14:19:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10172
EWS
Comment 2
2023-02-15 17:35:37 PST
Committed
260334@main
(3bcb8ff8fb7d): <
https://commits.webkit.org/260334@main
> Reviewed commits have been landed. Closing PR #10172 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-15 17:36:16 PST
<
rdar://problem/105524800
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug