WebProcess::m_userGestureTokens should be WeakHashMap instead of HashMap of raw pointers https://bugs.webkit.org/show_bug.cgi?id=252346

Reviewed by Chris Dumez.

* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::userGestureTokenIdentifier):
(WebKit::WebProcess::userGestureTokenDestroyed):
* Source/WebKit/WebProcess/WebProcess.h:

Canonical link: https://commits.webkit.org/260334@main